[tool.poetry]
name = "aleph-vrf"
version = "0.1.0"
description = ""
authors = ["mhh <mike.hukiewitz@robotter.ai>"]
readme = "README.md"
packages = [{include = "aleph_vrf"}]

[tool.poetry.dependencies]
python = "^3.11"
aleph-sdk-python = "^0.7.0"
secret-sharing = "^0.2.7"
fastapi = "^0.100.0"
pynacl = "^1.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
